--- a/math-0305049/finetune.tex
+++ b/math-0305049/finetune.tex
@@ -12,7 +12,7 @@ co-do-main mon-a-dic gr-ou-p-oi-dal}
 % \setlength{\evensidemargin}{22mm}
 
 \usepackage{fancyhdgs}
-\pagestyle{fancyplain}
+\pagestyle{plain}
 \renewcommand{\chaptermark}[1]{\markboth{#1}{}}
 \renewcommand{\sectionmark}[1]{\markright{\thesection\ \ #1}}
 \lhead[\fancyplain{}{\bfseries\thepage}]{\fancyplain{}{\bfseries\rightmark}}
