--- a/math-0305049/freestrict.tex
+++ b/math-0305049/freestrict.tex
@@ -56,7 +56,7 @@ Here is the idea.  Suppose we know how to construct the free strict
   \[
 \setlength{\unitlength}{1mm}
 \begin{picture}(70,56)(-35,-28)
-\cell{0}{0.5}{c}{\epsfig{file=3pd.eps}}
+\cell{0}{0.5}{c}{\includegraphics{3pd.eps}}
 \cell{-32}{0}{r}{x}
 \cell{32}{0}{l}{x'}
 \cell{15}{26}{c}{\scriptstyle f_0}
@@ -89,7 +89,7 @@ Here is the idea.  Suppose we know how to construct the free strict
   are the same as those of $X$ and $Y$, and a typical 3-cell of $Z$ looks
   like
   \[
-  \epsfig{file=long3pd.eps}
+  \includegraphics{long3pd.eps}
 %   \hand{45}{49}
   \]
   where the cells making up this diagram are cells of $X$.  So $Z$ is the
