--- a/math-0305049/intro.tex
+++ b/math-0305049/intro.tex
@@ -167,11 +167,11 @@ $T$.
 \end{array}
 &&
 \begin{array}{c}
-\epsfig{file=domtreeop.eps}
+\includegraphics{domtreeop.eps}
 \end{array}
 \goby{\textstyle\theta}
 \begin{array}{c}
-\epsfig{file=codtreeop.eps}
+\includegraphics{codtreeop.eps}
 \end{array}
 \\
 \\
