--- a/math-0305049/om.tex
+++ b/math-0305049/om.tex
@@ -571,8 +571,8 @@ hom-set is unchanged if we replace $\reals^\infty$ by $\reals^{\max\{d_1,
 \setlength{\unitlength}{1mm}
 \begin{picture}(104,70)
 % cheese.eps is 72mm wide and 70mm high
-\cell{0}{0}{bl}{\epsfig{file=cheese.eps}}
-\cell{92}{35}{l}{\epsfig{file=cheeseaxes.eps}}
+\cell{0}{0}{bl}{\includegraphics{cheese.eps}}
+\cell{92}{35}{l}{\includegraphics{cheeseaxes.eps}}
 \cell{105}{23}{c}{x_1}
 \cell{107}{36.5}{c}{x_2}
 \cell{94}{47}{c}{x_3}
@@ -1557,7 +1557,7 @@ these fixed points are shown in Fig.~\ref{fig:fractals}.%
 \cell{15}{-2}{t}{z_6}
 \end{picture}}
 % Peano curve
-\cell{50}{5}{bl}{\epsfig{file=peano.eps}}
+\cell{50}{5}{bl}{\includegraphics{peano.eps}}
 % Sierpinski label
 \cell{-17}{54}{br}{\textrm{(c)}}
 % Sierpinski generator
@@ -1575,7 +1575,7 @@ these fixed points are shown in Fig.~\ref{fig:fractals}.%
 \cell{15}{-2}{t}{z_5}
 \end{picture}}
 % Sierpinski curve
-\cell{50}{55}{bl}{\epsfig{file=sier.eps}}
+\cell{50}{55}{bl}{\includegraphics{sier.eps}}
 % Koch label
 \cell{-17}{95}{br}{\textrm{(b)}}
 % Koch generator
@@ -1593,7 +1593,7 @@ these fixed points are shown in Fig.~\ref{fig:fractals}.%
 \cell{15}{-2}{t}{z_4}
 \end{picture}}
 % Koch curve
-\cell{50}{96}{bl}{\epsfig{file=koch.eps}}
+\cell{50}{96}{bl}{\includegraphics{koch.eps}}
 % Dedekind label
 \cell{-17}{119}{br}{\textrm{(a)}}
 % Dedekind generator
@@ -1740,7 +1740,7 @@ disks inside the unit disk: the $i$th little disk is $\alpha_i D(\mb{0},
 $\begin{array}{c}
 \setlength{\unitlength}{1mm}
 \begin{picture}(55,61)(-1,0)
-\cell{0}{0}{bl}{\epsfig{file=disksdomain.eps}}
+\cell{0}{0}{bl}{\includegraphics{disksdomain.eps}}
 \cell{8}{47}{c}{\theta_1}
 \cell{1}{19}{c}{\theta_2}
 \cell{31}{58}{c}{\theta_3}
@@ -1755,7 +1755,7 @@ composes to
 $\begin{array}{c}
 \setlength{\unitlength}{1mm}
 \begin{picture}(20,20)
-\cell{0}{0}{bl}{\epsfig{file=diskscodomain.eps}}
+\cell{0}{0}{bl}{\includegraphics{diskscodomain.eps}}
 \cell{10}{-2}{t}{\theta \of (\theta_1, \theta_2, \theta_3)}
 \end{picture}
 \end{array}$
