--- a/math-0305049/topo.tex
+++ b/math-0305049/topo.tex
@@ -76,12 +76,12 @@ In ordinary category theory we have diagrams of objects and arrows such as
 We can imagine more complex category-like structures in which there
 are diagrams such as
 \[
-\epsfig{file=higher.eps}.
+\includegraphics{higher.eps}.
 \]
 This looks like an electronic circuit diagram or a flow chart; the unifying
 idea is that of `information flow'. It can be redrawn as
 \[
-\epsfig{file=plumbing.eps,height=62mm},
+\includegraphics[height=62mm]{plumbing.eps},
 \]
 which looks like a surface or a diagram from topological quantum field
 theory.%
@@ -96,7 +96,7 @@ commutativity:
 \setlength{\unitlength}{1mm}
 \begin{picture}(55,27)(0,3)
 % main article
-\cell{5}{6}{bl}{\epsfig{file=comm.eps}}
+\cell{5}{6}{bl}{\includegraphics{comm.eps}}
 % LHS
 \cell{5.5}{29.2}{r}{x}
 \cell{15}{29}{l}{y}
@@ -126,7 +126,7 @@ algebraic aspects of diagrams like these.
 
 Moreover, if we allow crossings, as in the commutativity diagram or as in
 \[
-\epsfig{file=braid.eps,height=25mm,width=50mm},
+\includegraphics[height=25mm,width=50mm]{braid.eps},
 \]
 then we obtain pictures looking like knots; and as we shall see, there are
 indeed relations between knot theory and higher categorical structures.
@@ -476,7 +476,7 @@ $\ \stackrel{\uparrow}{\blob}\ \
 \begin{center}
 \setlength{\unitlength}{1mm}
 \begin{picture}(30,30)(0,-5)
-\cell{0}{0}{bl}{\epsfig{file=onecobord.eps}}
+\cell{0}{0}{bl}{\includegraphics{onecobord.eps}}
 \cell{0.5}{21.5}{b}{\scriptstyle{\downarrow}}
 \cell{10.5}{21.5}{b}{\scriptstyle{\downarrow}}
 \cell{20.5}{21.5}{b}{\scriptstyle{\uparrow}}
@@ -493,11 +493,11 @@ quotienting out and carry on up the dimensions.
 \item 2-cells: 2-manifolds with corners, such as
 \[
 \begin{array}[c]{c}
-\epsfig{file=pants.eps}	
+\includegraphics{pants.eps}	
 \end{array}
 \ \ \textrm{or}\ \ 	
 \begin{array}[c]{c}
-\epsfig{file=twocobord.eps}	
+\includegraphics{twocobord.eps}	
 \end{array}
 \]
 (leaving all the orientations off).  The right-hand diagram shows a 2-cell
@@ -508,11 +508,11 @@ L = \ \blob\ \ \blob\ ,
 L'=\ \blob\ \ \blob\ \ \blob\ \ \blob\ , 
 \diagspace
 M=\begin{array}[c]{c}
-\epsfig{file=hoops.eps}
+\includegraphics{hoops.eps}
 \end{array},
 \diagspace
 M'=\begin{array}[c]{c}
-\epsfig{file=lines.eps}
+\includegraphics{lines.eps}
 \end{array},  
 \]
 and $N$ is the disjoint union of the two 2-dimensional sheets.
@@ -603,7 +603,7 @@ composition and a unit element $1$, obeying the usual axioms.  So we have:
 \put(0.5,0.0){\vector(-1,0){0}}
 \cell{2.7}{1.4}{l}{y}
 \end{picture}
-% \epsfig{file=monoid.ps}
+% \includegraphics{monoid.ps}
 \end{array}
 \]
 
@@ -713,7 +713,7 @@ has:
 for instance
 \[
 \begin{array}[c]{c}
-\epsfig{file=braidmorphism.eps}
+\includegraphics{braidmorphism.eps}
 \end{array}
 \diagspace\diagspace\diagspace
 \begin{diagram}[height=10mm]
@@ -725,7 +725,7 @@ for instance
 \item braiding: left over right, for instance
 \[
 \begin{array}[c]{c}
-\epsfig{file=braiding.eps}
+\includegraphics{braiding.eps}
 \end{array}
 \diagspace\diagspace
 \begin{diagram}[height=10mm]
@@ -947,11 +947,11 @@ It follows that any non-symmetric braided monoidal category is a weak
 3-category not equivalent to a strict one.  The canonical example is
 \fcat{Braid} itself, which is non-symmetric precisely because the overpass
 $\begin{array}{c} 
-\epsfig{file=overpass.eps}
+\includegraphics{overpass.eps}
 \end{array}$
 cannot be deformed to the underpass 
 $\begin{array}{c}
-\epsfig{file=underpass.eps}
+\includegraphics{underpass.eps}
 \end{array}$
 in $\reals^3$.
 \end{description}%
