--- a/math-0305049/fcm.tex
+++ b/math-0305049/fcm.tex
@@ -454,7 +454,7 @@ together with a composition function
 \begin{array}{c}
 \setlength{\unitlength}{1mm}
 \begin{picture}(49,25)(0,-2)
-\cell{0}{0}{bl}{\epsfig{file=vdcompdom.eps}}
+\cell{0}{0}{bl}{\includegraphics{vdcompdom.eps}}
 % 0-cell labels
 \cell{10}{1.5}{t}{a_0}
 \cell{15.5}{15.5}{t}{a_1}
@@ -484,7 +484,7 @@ together with a composition function
 \begin{array}{c}
 \setlength{\unitlength}{1mm}
 \begin{picture}(49,25)(0,-2)
-\cell{0}{0}{bl}{\epsfig{file=vdcompcod.eps}}
+\cell{0}{0}{bl}{\includegraphics{vdcompcod.eps}}
 % 0-cell labels
 \cell{10}{1.5}{t}{a_0}
 \cell{40}{1.5}{t}{a_n}
@@ -502,7 +502,7 @@ and an identity function
 \begin{array}{c}
 \setlength{\unitlength}{1mm}
 \begin{picture}(33,5)
-\cell{3}{2}{l}{\epsfig{file=vdiddom.eps}}
+\cell{3}{2}{l}{\includegraphics{vdiddom.eps}}
 \cell{2.5}{1.3}{br}{a}
 \cell{30}{1.3}{bl}{a'}
 \cell{16}{3}{b}{\scriptstyle m}
@@ -514,7 +514,7 @@ and an identity function
 \begin{array}{c}
 \setlength{\unitlength}{1mm}
 \begin{picture}(33,13)(0,1)
-\cell{3}{3}{bl}{\epsfig{file=vdidcod.eps}}
+\cell{3}{3}{bl}{\includegraphics{vdidcod.eps}}
 \cell{2.5}{3.5}{br}{a}
 \cell{30}{3.5}{bl}{a'}
 \cell{16}{2.5}{t}{\scriptstyle m}
@@ -1234,8 +1234,8 @@ Fig.~\ref{fig:cobordisms}
 \centering
 \begin{picture}(102,46)(-1,0)
 % cobordisms
-\cell{-1}{0}{bl}{\epsfig{file=cob2.eps}}
-\cell{-1}{26}{bl}{\epsfig{file=cob1.eps}}
+\cell{-1}{0}{bl}{\includegraphics{cob2.eps}}
+\cell{-1}{26}{bl}{\includegraphics{cob1.eps}}
 % arrows
 \put(0,30){\vector(0,-1){20}}
 \cell{2}{19}{l}{\cong}
