--- a/2106.00190/SchurFunctors.tex
+++ b/2106.00190/SchurFunctors.tex
@@ -1,5 +1,23 @@
 \documentclass[12pt,reqno]{amsart}
-\usepackage[a4paper,top=3cm,bottom=3cm,inner=3cm,outer=3cm]{geometry}
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue,pagebackref, final, hyperindex,
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[papersize={7.0in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+%\pagestyle{plain}
 
 \usepackage{amsmath, amssymb, amsfonts, mathtools}
 \usepackage{wasysym}
@@ -7,16 +25,6 @@
 
 \usepackage{xcolor}
 \definecolor{darkgreen}{rgb}{0,0.45,0}
-\usepackage[
-    colorlinks, 
-    citecolor=blue, 
-    urlcolor=darkgreen, 
-    final, 
-    hyperindex, 
-    pagebackref, 
-    % linktoc = page, 
-    linkcolor = black
-]{hyperref}
 \renewcommand*{\backref}[1]{(Referred to on page #1.)}
 
 \usepackage[capitalize]{cleveref}
