--- a/hep-th-0408048/hep-th-0408048.tex
+++ b/hep-th-0408048/hep-th-0408048.tex
@@ -65,6 +65,7 @@ bookmarksopenlevel=10
 \renewcommand{\L}{\Lambda}
 \newcommand{\vk}{\vec{k}}
 
+\def\Diff{\mathop{\it Diff}}
 
 \begin{document}
 
@@ -778,13 +779,13 @@ ${\cal H}^{\it kin}$.
 The next step is to construct  a unitary realization of the diffeomorphism group, 
 acting on ${\cal H}^{\it kin}$.  The rigorous theorems tell us this exists.
 At an intuitive level the construction proceeds as follows.   
-Given a diffeomorphism $\phi \in Diff (\Sigma )$  we represent it as
+Given a diffeomorphism $\phi \in \Diff(\Sigma )$  we represent it as
 a unitary operator as
 \f
-\hat{U}(\phi ) \circ |\Gamma \rangle = |\phi^{-1} \circ \Gamma \rangle,  \forall \phi \in Diff( \Sigma ) 
+\hat{U}(\phi ) \circ |\Gamma \rangle = |\phi^{-1} \circ \Gamma \rangle,  \forall \phi \in \Diff( \Sigma ) 
 \ff
 It is trivial to check the unitarity. This follows from the fact that for any spin network
-$\Gamma$ and any diffeomorphism $\phi \in Diff( \Sigma )$,  $|\Gamma \rangle$ and
+$\Gamma$ and any diffeomorphism $\phi \in \Diff( \Sigma )$,  $|\Gamma \rangle$ and
 $| \phi \circ \Gamma \rangle$ are both normalizable states, with the same norm.   
 
 It is less trivial, but still true, to prove that there is no anomaly.  
@@ -814,7 +815,7 @@ One then defines a space of diffeomorphism invariant states
 {\cal H}^{\it diffeo} \subset {\cal H}^{\it kin}
 \ff 
 containing all states for which $\Psi [\phi \circ \Gamma ] = \Psi [\Gamma ]$,
-for all $\phi \in Diff( \Sigma )$.  It is easy to  construct such states. For example,
+for all $\phi \in \Diff( \Sigma )$.  It is easy to  construct such states. For example,
 let ${\cal K}$ be any knot or graph invariant, then 
 \f
 \Psi_{\cal K}[\Gamma ]={\cal K}[\Gamma ]
@@ -1394,7 +1395,7 @@ manifold without metric. Assume that the Wilson loop
 operator and area (or generally electric flux) operator are well defined on a kinematical
  hilbert space,  ${\cal H}^{\it kin}$. Assume also that ${\cal H}^{\it kin}$ 
 carries a unitary anomaly free representation
-of $Diff(\Sigma )$ so that the space ${\cal H}^{diff}$ of diffeomorphism 
+of $\Diff(\Sigma )$ so that the space ${\cal H}^{diff}$ of diffeomorphism 
 invariant states may be constructed (formally as a subspace of a dual space of  ${\cal H}^{\it kin}$. 
 Then the Hilbert space of the theory is isomorphic to that just described. }
   
@@ -2229,15 +2230,15 @@ independent methods of quantization, analogous to LQG have been
 applied to the free string in \cite{artem-string,thomas-string,HP-string}.  These
 give theories which are well defined but which are unitarily inequivalent
 to the usual quantization of the free string. The reason is that the usual
-quantization uses a representation of $Diff(S^1 )$ which is anomalous,
+quantization uses a representation of $\Diff(S^1 )$ which is anomalous,
 whereas the LQG-type quantizations use non-anomalous representations.
 The former approach uses structure special to $1+1$ theories which is that
-there is a generator of $Diff(S^1)$, called $L_0$, which in a certain
+there is a generator of $\Diff(S^1)$, called $L_0$, which in a certain
 gauge can be interpreted as the hamiltonian of the free string. It
 makes sense, in the quantization of a gauge fixed quantization, to choose
 a representation in which $L_0$ is positive and hermitian.  The background
 independent quantizations on the other hand must treat all the generators
-of $Diff(S^1 )$ as constraints.  Thus, the two methods are different
+of $\Diff(S^1 )$ as constraints.  Thus, the two methods are different
 and yield different theories. This does not mean one or the other is right,
 but it does illuminate an important difference between background
 independent and background dependent approaches to quantization. 
