--- a/howard-1980/howard.tex
+++ b/howard-1980/howard.tex
@@ -107,6 +107,7 @@ bookmarksopenlevel=10
 \def\gimpb{\G \imp \b}
 \def\gimpa{\G \imp \a}
 \def\rbnn{R_n^{\b(n)}}
+\def\ey{\exists y \, \a(y)}
 
 \newtheorem{theorem}{Theorem}
 
@@ -443,5 +444,66 @@ Theorem 3 of section 6 extends to the present terms. By use of Theorem 3 it is e
 
 How are we to handle the existential quantifier in our theory of constructions? This appears to be a nontrivial question. The following two alternatives suggest themselves.
 
+\bigskip
+\noindent
+(i) {\it Weak existence}. In the formulation of $\HIMP$ take the sequents
+\begin{align*}
+&\imp \a (t) \limp \exists y\, \a(y) \\
+&\imp \exists y\, \a(y) \limp ( \forall x \, (\a(x) \limp \b) \limp \b)
+\end{align*}
+%
+($x$ not free in $\b$) to be axioms and introduce new prime terms $C_1$ , $C_2$ of types $\a(t) \limp \exists y \, \a(y)$ and  $\exists y\, \a(y) \limp ( \forall x \, (\a(x) \limp \b) \limp \b)$, respectively. Postulate the contraction
+$$
+C_2 ( C_1 F ) G \contr GtF
+$$
+for all terms $F$ and $G$ of types $\a( t )$ and $\forall x \, (\a(x) \limp \b) \limp \b)$, respectively. Theorems 3, 5 and 6 extend to $\HIMP$.
+
+Corresponding to Theorem 4 we have:
+
+\begin{theorem}
+Every closed irreducible term of type $\exists y \, \a(y)$ has the form $C_1^{ \a(n) \limp \exists y \, \a(y)} F \a (n)$.
+\end{theorem}
+%
+Thus from an irreducible construction of $\imp  \exists y \, \a(y)$ we get a numeral $n$ and an irreducible construction of $\imp \a( n )$ (assuming $\exists y \, \a(y)$ closed).
+
+\bigskip
+\noindent
+(ii) {\it Strong existence (choice operators)}. It is natural to interpret an object of type $\ey$ as a pair $\langle t, F^{\a(t)}\rangle$ . Thus, in section 10, $(\ey)^\star$ would be deﬁned as the set of all pairs $\langle n, Z\rangle$ such that $Z \in \a(n)^\star$. Hence introduce projection operators $P_1$ and $P_2$ which give the required components $t$ and $F^{\a(t)}$ when applied to the pair $\langle t, F^{\a(t)}\rangle$ regarded as an object of type $\ey$. The operators $P_1$ and $P_2$ can be considered to have types $\ey \limp 0$ and $X^{\ey}\a(P_1 X^{\ey})$, respectively. This takes us outside the formalism of $\HIMP$: the type symbols of $P_1$ and $P_2$ are not formulae of $\HIMP$. Nevertheless, it is clear what meaning we are to attach to $P_1$ and $P_2$. Namely, $P_1$ applies to an object $F$ of type $\ey$ and an object $P_1 F$ of type $0$; and $P_2$ when applied to $F$ yields an object of type $\a ( P_1 F )$.
+
+To illustrate the use of $P_1$ as a choice operator, let $\a(x,y)$ be a formula of $\HIMP$ with free variables $x$ and $y$ , and let $F$
+ be a construction of type $\ey$. Then $\l x . \, P_1 F$ is a term $\varphi$ satisfying $\forall x \, \a (x, \varphi(x))$
+
+In general a type symbol of the form $\forall X^ \a\b$ arises by abstraction from a term $F^\b$, where the variable $X^\a$ occurs in $\b$ (as well as in other locations in $F$). A theory of such terms would extend the theory developed in the preceding sections. In the latter theory the only variables occurring in the type symbols have type $0$ (they are, namely, numerical variables of $\HIMP$.
+
+
+It might be of interest to know the answer to the following question. Let $G$ be a closed term obtained by extending our supply of constructions in the manner just described. Suppose $G$ has type $\a$ where $\a$ is a formula of $\HIMP$. Must there be a derivation of $\imp \a$ in $\HIMP$?
+
+
+\subsection*{\it 13. Inﬁnite constructions}
+
+As is well-known, we do not have cut elimination for $\HIMP$ unless the axiom of mathematical induction is replaced by an $\omega$-rule.
+There is no diﬃculty in developing a theory of constructions for the $\omega$-rule version of $\HIMP$. 
+In fact, if one uses Tait’s notion of inﬁnite terms (Tait, 1967), one gets a very simple theory (modulo the question of handling inﬁnite terms constructively).
+
+\renewcommand{\refname}{}
+
+\subsection*{\rm References}
+
+\vskip-20pt
+
+\begin{thebibliography}{9}
+
+
+\bibitem{1} Curry, H. B. and Feys, R. (1958). Combinatory Logic, North-Holland, Amsterdam.
+
+\bibitem{2} Lauchli, H. (1970). An abstract notion of realizability for which intuitionistic predicate calculus is complete. In ``Intuitionism and Proof Theory. Proceedings of the Summer Conference at Buﬀalo N.Y.'' (Eds. G. Myhill, A. Kino, R. E. Vesley) pp. 227–234. North-Holland, Amsterdam.
+
+\bibitem{3} Prawitz, D. (1965). Natural Deduction, Almqvist and Wiksell, Stockholm.
+
+\bibitem{4} Tait, W. W. (1965). Inﬁnitely long terms of transﬁnite type. In ``Formal Systems and Recursive Functions'' (Eds. J. N. Crossley and M. A. E. Dummett), North-Holland, Amsterdam.
+
+\bibitem{5} Tait, W. W. (1967). Intensional interpretations of functionals of ﬁnite type, Journal of Symbolic Logic 32, 198–212.
+
+\end{thebibliography}
 
 \end{document}
