--- a/howard-1980/howard.tex
+++ b/howard-1980/howard.tex
@@ -141,7 +141,7 @@ In Part I the ideas are illustrated for the intuitionistic propositional calculu
 
 H. Curry (1958) has observed that there is a close correspondence between axioms of positive implicational propositional logic, on the one hand, and basic combinators on the other hand. For example, the combinator $K = \l X.\,\l Y.\,X$ corresponds to the axiom $\a \limp (\b \limp \a)$.
 
-The following notion of construction, for positive implicational propositional logic, was motivated by Curry’s observation. More precisely, Curry’s observation provided half the motivation. The other half was provided by W. Tait’s discovery of the close correspondence between cut elimination and reduction of $\l$-terms (W. W. Tait, 1965). It is convenient to use $\l$-terms rather than combinators. This corresponds to the sequent formulation of propositional logic.
+The following notion of construction, for positive implicational propositional logic, was motivated by Curry's observation. More precisely, Curry's observation provided half the motivation. The other half was provided by W. Tait's discovery of the close correspondence between cut elimination and reduction of $\l$-terms (W. W. Tait, 1965). It is convenient to use $\l$-terms rather than combinators. This corresponds to the sequent formulation of propositional logic.
 
 
 \subsection*{\it 1. Formulation of the sequent calculus}
@@ -235,7 +235,7 @@ with $\gamma$ equal to $\b$, and use of $\b,\, \D \imp \b$. We could replace (5.
 Let $\PIstar$ be $\PI$ with the rule {\rm (1.3)} replaced by {\rm (5.2)}. Then given any derivation of $\G \imp \b$
 in  $\PIstar$ we can find an irreducible construction of $\G \imp \b$ and conversely.
 \end{theorem}
-Cut {\it elimination} can be taken to mean: the transformation of a proof of $\gimpb$ in $\PI$ into a proof of $\gimpb$ in $\PIstar$. Thus cut elimination can be obtained as a consequence of the reduction of terms to normal form. As mentioned in section 4, such reduction is easy to prove for the terms under discussion. Results following from cut elimination in $\PI$ (e.g.) the nonderivability of Peirce’s Law $(\a \limp \b. \limp \a) \limp \a$ seem to be obtainable at least as easily from the normalizability of constructions.
+Cut {\it elimination} can be taken to mean: the transformation of a proof of $\gimpb$ in $\PI$ into a proof of $\gimpb$ in $\PIstar$. Thus cut elimination can be obtained as a consequence of the reduction of terms to normal form. As mentioned in section 4, such reduction is easy to prove for the terms under discussion. Results following from cut elimination in $\PI$ (e.g.) the nonderivability of Peirce's Law $(\a \limp \b. \limp \a) \limp \a$ seem to be obtainable at least as easily from the normalizability of constructions.
 
 \def\fimpa{f \limp a}
 \def\contr{\mathop{\sf contr}}
@@ -267,8 +267,8 @@ Then we get the following theorem.
 \begin{theorem}
 Theorem 3 Every closed irreducible term of type $\a \land \b$ has the form $B_1 F^\a G^\b $ where $B_1$ is as above.
 \end{theorem}
-[{\it Note added 1979}. This treatment of $\lnot$ and $\land$ does not seem to be appropriate for cut elimination in Gentzen’s sequent calculus. 
-As P. Martin-Löf soon pointed out to me, it is appropriate for D. Prawitz’s theory of Gentzen’s system of natural deduction.
+[{\it Note added 1979}. This treatment of $\lnot$ and $\land$ does not seem to be appropriate for cut elimination in Gentzen's sequent calculus. 
+As P. Martin-Löf soon pointed out to me, it is appropriate for D. Prawitz's theory of Gentzen's system of natural deduction.
 See Prawitz (1965). The terms $A^{f \limp \a}$ and $B_1^{\a \limp (\b \limp (\a \land \b))}$ correspond
 to the inference rules
 $$
@@ -468,7 +468,7 @@ Thus from an irreducible construction of $\imp  \exists y \, \a(y)$ we get a num
 
 \bigskip
 \noindent
-(ii) {\it Strong existence (choice operators)}. It is natural to interpret an object of type $\ey$ as a pair $\langle t, F^{\a(t)}\rangle$ . Thus, in section 10, $(\ey)^\star$ would be deﬁned as the set of all pairs $\langle n, Z\rangle$ such that $Z \in \a(n)^\star$. Hence introduce projection operators $P_1$ and $P_2$ which give the required components $t$ and $F^{\a(t)}$ when applied to the pair $\langle t, F^{\a(t)}\rangle$ regarded as an object of type $\ey$. The operators $P_1$ and $P_2$ can be considered to have types $\ey \limp 0$ and $X^{\ey}\a(P_1 X^{\ey})$, respectively. This takes us outside the formalism of $\HIMP$: the type symbols of $P_1$ and $P_2$ are not formulae of $\HIMP$. Nevertheless, it is clear what meaning we are to attach to $P_1$ and $P_2$. Namely, $P_1$ applies to an object $F$ of type $\ey$ and an object $P_1 F$ of type $0$; and $P_2$ when applied to $F$ yields an object of type $\a ( P_1 F )$.
+(ii) {\it Strong existence (choice operators)}. It is natural to interpret an object of type $\ey$ as a pair $\langle t, F^{\a(t)}\rangle$ . Thus, in section 10, $(\ey)^\star$ would be defined as the set of all pairs $\langle n, Z\rangle$ such that $Z \in \a(n)^\star$. Hence introduce projection operators $P_1$ and $P_2$ which give the required components $t$ and $F^{\a(t)}$ when applied to the pair $\langle t, F^{\a(t)}\rangle$ regarded as an object of type $\ey$. The operators $P_1$ and $P_2$ can be considered to have types $\ey \limp 0$ and $X^{\ey}\a(P_1 X^{\ey})$, respectively. This takes us outside the formalism of $\HIMP$: the type symbols of $P_1$ and $P_2$ are not formulae of $\HIMP$. Nevertheless, it is clear what meaning we are to attach to $P_1$ and $P_2$. Namely, $P_1$ applies to an object $F$ of type $\ey$ and an object $P_1 F$ of type $0$; and $P_2$ when applied to $F$ yields an object of type $\a ( P_1 F )$.
 
 To illustrate the use of $P_1$ as a choice operator, let $\a(x,y)$ be a formula of $\HIMP$ with free variables $x$ and $y$ , and let $F$
  be a construction of type $\ey$. Then $\l x . \, P_1 F$ is a term $\varphi$ satisfying $\forall x \, \a (x, \varphi(x))$
@@ -479,11 +479,11 @@ In general a type symbol of the form $\forall X^ \a\b$ arises by abstraction fro
 It might be of interest to know the answer to the following question. Let $G$ be a closed term obtained by extending our supply of constructions in the manner just described. Suppose $G$ has type $\a$ where $\a$ is a formula of $\HIMP$. Must there be a derivation of $\imp \a$ in $\HIMP$?
 
 
-\subsection*{\it 13. Inﬁnite constructions}
+\subsection*{\it 13. Infinite constructions}
 
 As is well-known, we do not have cut elimination for $\HIMP$ unless the axiom of mathematical induction is replaced by an $\omega$-rule.
 There is no diﬃculty in developing a theory of constructions for the $\omega$-rule version of $\HIMP$. 
-In fact, if one uses Tait’s notion of inﬁnite terms (Tait, 1967), one gets a very simple theory (modulo the question of handling inﬁnite terms constructively).
+In fact, if one uses Tait's notion of infinite terms (Tait, 1967), one gets a very simple theory (modulo the question of handling infinite terms constructively).
 
 \renewcommand{\refname}{}
 
@@ -500,9 +500,9 @@ In fact, if one uses Tait’s notion of inﬁnite terms (Tait, 1967), one gets a
 
 \bibitem{3} Prawitz, D. (1965). Natural Deduction, Almqvist and Wiksell, Stockholm.
 
-\bibitem{4} Tait, W. W. (1965). Inﬁnitely long terms of transﬁnite type. In ``Formal Systems and Recursive Functions'' (Eds. J. N. Crossley and M. A. E. Dummett), North-Holland, Amsterdam.
+\bibitem{4} Tait, W. W. (1965). Infinitely long terms of transfinite type. In ``Formal Systems and Recursive Functions'' (Eds. J. N. Crossley and M. A. E. Dummett), North-Holland, Amsterdam.
 
-\bibitem{5} Tait, W. W. (1967). Intensional interpretations of functionals of ﬁnite type, Journal of Symbolic Logic 32, 198–212.
+\bibitem{5} Tait, W. W. (1967). Intensional interpretations of functionals of finite type, Journal of Symbolic Logic 32, 198–212.
 
 \end{thebibliography}
 
