--- a/howard-1980/howard.tex
+++ b/howard-1980/howard.tex
@@ -34,7 +34,7 @@ bookmarksopenlevel=10
 \def\mm{\mathrel{||}\mathrel{\mkern-4.4mu}\relbar}
 
 \usepackage[papersize={6.8in, 9.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
-\linespread{1.05}
+\linespread{1.1}
 \sloppy
 \raggedbottom
 \pagestyle{plain}
@@ -108,6 +108,8 @@ bookmarksopenlevel=10
 \def\gimpa{\G \imp \a}
 \def\rbnn{R_n^{\b(n)}}
 \def\ey{\exists y \, \a(y)}
+\def\HIMP{H(\limp, \lor, \forall)}
+\def\HIMPE{H(\limp, \lor, \forall, \exists)}
 
 \newtheorem{theorem}{Theorem}
 
@@ -294,8 +296,6 @@ for all terms $M$,$N$,$F$,$G$ of types $\a$, $\b$, $a \limp \b$ and $\b \limp \g
 Every closed irreducible term of type $\a \lor \b$ has the form $C_1F^\a$ or $C_2 G^\b$, where $C_1$ and $C_2$ are as above.
 \end{theorem}
 
-\def\HIMP{H(\limp, \lor, \forall)}
-
 \section*{II Heyting Arithmetic}
 
 We will be concerned mainly with the subsystem $H(\limp, \lor, \forall)$ of Heyting arithmetic obtained by omitting $\lor$ and $\exists$. As is well-known, $\lnot\a$ can be defined as $\a \limp 0 = 1$ In section 12 we will make some remarks about the question of including $\exists$. Of course $\lor$ can be defined by use of $\exists$. The variables belonging to $H(\limp, \lor, \forall)$ will be called {\it number variables}.
@@ -446,7 +446,7 @@ How are we to handle the existential quantifier in our theory of constructions? 
 
 \bigskip
 \noindent
-(i) {\it Weak existence}. In the formulation of $\HIMP$ take the sequents
+(i) {\it Weak existence}. In the formulation of $\HIMPE$ take the sequents
 \begin{align*}
 &\imp \a (t) \limp \exists y\, \a(y) \\
 &\imp \exists y\, \a(y) \limp ( \forall x \, (\a(x) \limp \b) \limp \b)
@@ -456,7 +456,7 @@ How are we to handle the existential quantifier in our theory of constructions? 
 $$
 C_2 ( C_1 F ) G \contr GtF
 $$
-for all terms $F$ and $G$ of types $\a( t )$ and $\forall x \, (\a(x) \limp \b) \limp \b)$, respectively. Theorems 3, 5 and 6 extend to $\HIMP$.
+for all terms $F$ and $G$ of types $\a( t )$ and $\forall x \, (\a(x) \limp \b) \limp \b)$, respectively. Theorems 3, 5 and 6 extend to $\HIMPE$.
 
 Corresponding to Theorem 4 we have:
 
@@ -468,22 +468,24 @@ Thus from an irreducible construction of $\imp  \exists y \, \a(y)$ we get a num
 
 \bigskip
 \noindent
-(ii) {\it Strong existence (choice operators)}. It is natural to interpret an object of type $\ey$ as a pair $\langle t, F^{\a(t)}\rangle$ . Thus, in section 10, $(\ey)^\star$ would be defined as the set of all pairs $\langle n, Z\rangle$ such that $Z \in \a(n)^\star$. Hence introduce projection operators $P_1$ and $P_2$ which give the required components $t$ and $F^{\a(t)}$ when applied to the pair $\langle t, F^{\a(t)}\rangle$ regarded as an object of type $\ey$. The operators $P_1$ and $P_2$ can be considered to have types $\ey \limp 0$ and $X^{\ey}\a(P_1 X^{\ey})$, respectively. This takes us outside the formalism of $\HIMP$: the type symbols of $P_1$ and $P_2$ are not formulae of $\HIMP$. Nevertheless, it is clear what meaning we are to attach to $P_1$ and $P_2$. Namely, $P_1$ applies to an object $F$ of type $\ey$ and an object $P_1 F$ of type $0$; and $P_2$ when applied to $F$ yields an object of type $\a ( P_1 F )$.
+(ii) {\it Strong existence (choice operators)}. It is natural to interpret an object of type $\ey$ as a pair $\langle t, F^{\a(t)}\rangle$ . Thus, in section 10, $(\ey)^\star$ would be defined as the set of all pairs $\langle n, Z\rangle$ such that $Z \in \a(n)^\star$. Hence introduce projection operators $P_1$ and $P_2$ which give the required components $t$ and $F^{\a(t)}$ when applied to the pair $\langle t, F^{\a(t)}\rangle$ regarded as an object of type $\ey$. The operators $P_1$ and $P_2$ can be considered to have types $\ey \limp 0$ and $X^{\ey}\a(P_1 X^{\ey})$, respectively. This takes us outside the formalism of $\HIMPE$: the type symbols of $P_1$ and $P_2$ are not formulae of $\HIMPE$. Nevertheless, it is clear what meaning we are to attach to $P_1$ and $P_2$. Namely, $P_1$ applies to an object $F$ of type $\ey$ and an object $P_1 F$ of type $0$; and $P_2$ when applied to $F$ yields an object of type $\a ( P_1 F )$.
 
-To illustrate the use of $P_1$ as a choice operator, let $\a(x,y)$ be a formula of $\HIMP$ with free variables $x$ and $y$ , and let $F$
+To illustrate the use of $P_1$ as a choice operator, let $\a(x,y)$ be a formula of $\HIMPE$ with free variables $x$ and $y$ , and let $F$
  be a construction of type $\ey$. Then $\l x . \, P_1 F$ is a term $\varphi$ satisfying $\forall x \, \a (x, \varphi(x))$
 
-In general a type symbol of the form $\forall X^ \a\b$ arises by abstraction from a term $F^\b$, where the variable $X^\a$ occurs in $\b$ (as well as in other locations in $F$). A theory of such terms would extend the theory developed in the preceding sections. In the latter theory the only variables occurring in the type symbols have type $0$ (they are, namely, numerical variables of $\HIMP$.
+In general a type symbol of the form $\forall X^ \a\b$ arises by abstraction from a term $F^\b$, where the variable $X^\a$ occurs in $\b$ (as well as in other locations in $F$). A theory of such terms would extend the theory developed in the preceding sections. In the latter theory the only variables occurring in the type symbols have type $0$ (they are, namely, numerical variables of $\HIMPE$).
 
 
-It might be of interest to know the answer to the following question. Let $G$ be a closed term obtained by extending our supply of constructions in the manner just described. Suppose $G$ has type $\a$ where $\a$ is a formula of $\HIMP$. Must there be a derivation of $\imp \a$ in $\HIMP$?
+It might be of interest to know the answer to the following question. Let $G$ be a closed term obtained by extending our supply of constructions in the manner just described. Suppose $G$ has type $\a$ where $\a$ is a formula of $\HIMPE$. Must there be a derivation of $\imp \a$ in $\HIMPE$?
 
 
 \subsection*{\it 13. Infinite constructions}
 
 As is well-known, we do not have cut elimination for $\HIMP$ unless the axiom of mathematical induction is replaced by an $\omega$-rule.
-There is no diﬃculty in developing a theory of constructions for the $\omega$-rule version of $\HIMP$. 
+There is no difficulty in developing a theory of constructions for the $\omega$-rule version of $\HIMP$. 
 In fact, if one uses Tait's notion of infinite terms (Tait, 1967), one gets a very simple theory (modulo the question of handling infinite terms constructively).
+
+\newpage
 
 \renewcommand{\refname}{}
 
