--- a/howard-1980/howard.tex
+++ b/howard-1980/howard.tex
@@ -180,7 +180,7 @@ By a type symbol is meant a formula of $\PI$. We will consider a $\l$-formalism 
 \end{quote}
 By a {\it construction} of a sequent $\G \imp \b$ is meant a term $F^\b$ of type $\b$ such that for
 every free variable $X^\a$ occurring in $F^\b$ there is a corresponding occurrence of $\a$
-in $\G$ (it being understood that the existence of k distinct free variables of the
+in $\G$ (it being understood that the existence of $k$ distinct free variables of the
 same type $\a$ in $F^\b$ is reflected by at least $k$ occurrences of $\a$ in $\G$). Thus $X^\a$ is
 a construction of $\a \imp \a$ (but $X^\a$ is also a construction of $\b, \a \imp \a)$. Another 
 example: $\l X^\a .\, \l Y^\b .\, X^\a$ is a construction of $\imp \a \limp (\b \limp \a)$.
@@ -210,7 +210,8 @@ The variables of type $\a$ are interpreted as ranging over the set $\a$.
 
 It is now clear, by induction on the rules (2.1)–(2.3) of term formation, how each term is to be interpreted as a function of the objects over which its free variables range. Thus the closed terms can be interpreted as a perfectly concrete set of functionals of finite type over the basic objects. This interpretation is used by H. Laüchli in the paper he read at the Summer Conference at Buffalo in 1968: see (Laüchli, 1970) pp. 227–229.
 
-Of course a constructivist would be interested in other interpretations; for example, interpretations related to the calculation of terms (i.e., reduction to irreducible form). It is easy to prove that the terms given above can he reduced to normal 
+Of course a constructivist would be interested in other interpretations; for example, interpretations related to the {\it calculation}
+of terms (i.e., reduction to irreducible form). It is easy to prove that the terms given above can he reduced to normal 
 (i.e., irreducible) form by $\l$-contractions. The relation between this and cut elimination will now be discussed briefly.
 
 \subsection*{\it 5. Normalization of terms and cut elimination}
@@ -237,7 +238,7 @@ with $\gamma$ equal to $\b$, and use of $\b,\, \D \imp \b$. We could replace (5.
 Let $\PIstar$ be $\PI$ with the rule {\rm (1.3)} replaced by {\rm (5.2)}. Then given any derivation of $\G \imp \b$
 in  $\PIstar$ we can find an irreducible construction of $\G \imp \b$ and conversely.
 \end{theorem}
-Cut {\it elimination} can be taken to mean: the transformation of a proof of $\gimpb$ in $\PI$ into a proof of $\gimpb$ in $\PIstar$. Thus cut elimination can be obtained as a consequence of the reduction of terms to normal form. As mentioned in section 4, such reduction is easy to prove for the terms under discussion. Results following from cut elimination in $\PI$ (e.g.) the nonderivability of Peirce's Law $(\a \limp \b. \limp \a) \limp \a$ seem to be obtainable at least as easily from the normalizability of constructions.
+Cut {\it elimination} can be taken to mean: the transformation of a proof of $\gimpb$ in $\PI$ into a proof of $\gimpb$ in $\PIstar$. Thus cut elimination can be obtained as a consequence of the reduction of terms to normal form. As mentioned in section 4, such reduction is easy to prove for the terms under discussion. Results following from cut elimination in $\PI$ (e.g.) the nonderivability of Peirce's Law $((\a \limp \b) \limp \a) \limp \a$ seem to be obtainable at least as easily from the normalizability of constructions.
 
 \def\fimpa{f \limp a}
 \def\contr{\mathop{\sf contr}}
