--- a/howard-1980/howard.tex
+++ b/howard-1980/howard.tex
@@ -25,7 +25,7 @@ bookmarksopenlevel=10
 \makeatletter
 \newcommand{\leqnos}{\tagsleft@true\let\veqno\@@leqno}
 \newcommand{\reqnos}{\tagsleft@false\let\veqno\@@eqno}
-\reqnos
+\leqnos
 \makeatother
 
 % make a ||- symbol
@@ -206,9 +206,7 @@ Given any derivation of $\G \imp \b$ in $\PI$ we can find a construction of $\G 
 For an interpretation in ordinary set theory let each propositional variable (i.e., prime type symbol) denote a specific set of basic
 objects. Then every type symbol can be taken to denote a set of things according to the rule: $\a \limp b$ 
 denotes the set of all functions whose domain is a superset of $\a$ and whose range is a subset of $\b$. (According as to whether the superset depends on the function in question, or whether it just depends on $\a$, we get somewhat differing interpretations). 
-The variables of type $\a$ are interpreted as ranging over the set $\a$.
-
-It is now clear, by induction on the rules (2.1)–(2.3) of term formation, how each term is to be interpreted as a function of the objects over which its free variables range. Thus the closed terms can be interpreted as a perfectly concrete set of functionals of finite type over the basic objects. This interpretation is used by H. Laüchli in the paper he read at the Summer Conference at Buffalo in 1968: see (Laüchli, 1970) pp. 227–229.
+The variables of type $\a$ are interpreted as ranging over the set $\a$. It is now clear, by induction on the rules (2.1)–(2.3) of term formation, how each term is to be interpreted as a function of the objects over which its free variables range. Thus the closed terms can be interpreted as a perfectly concrete set of functionals of finite type over the basic objects. This interpretation is used by H. Laüchli in the paper he read at the Summer Conference at Buffalo in 1968: see (Laüchli, 1970) pp. 227–229.
 
 Of course a constructivist would be interested in other interpretations; for example, interpretations related to the {\it calculation}
 of terms (i.e., reduction to irreducible form). It is easy to prove that the terms given above can he reduced to normal 
@@ -216,7 +214,7 @@ of terms (i.e., reduction to irreducible form). It is easy to prove that the ter
 
 \subsection*{\it 5. Normalization of terms and cut elimination}
 
-Clearly the cut rule for $\PI$ corresponds to the following rule of term formation: from $F^\a$ and $G^\b$ get $\fxg$ (the result of substituting $F\a$ for the free variable $X^\a$ in $G^\b$, where no free variable in $F^\a$ becomes hound in $\fxg$. Though we did not include substitution in our rules of term formation, the rule (2.3) (application) is just about as bad --- from the viewpoint of obtaining irreducible terms. Professor Curry is fond of pointing out how to get irreducible terms: simply replace the rule (2.3) by:
+Clearly the cut rule for $\PI$ corresponds to the following rule of term formation: from $F^\a$ and $G^\b$ get $\fxg$ (the result of substituting $F^\a$ for the free variable $X^\a$ in $G^\b$, where no free variable in $F^\a$ becomes hound in $\fxg$. Though we did not include substitution in our rules of term formation, the rule (2.3) (application) is just about as bad --- from the viewpoint of obtaining irreducible terms. Professor Curry is fond of pointing out how to get irreducible terms: simply replace the rule (2.3) by:
 \begin{align*}
 &{\text{from a variable }} X \text{ of type } \a_1 \limp (\a_2 \limp ( ... ( \a_n \limp \b)... ))\\
 \tag{5.1}&\text{and terms } F_1, ... F_n \text{ of types }  \a_1, ... \a_n, \text{ respectively,} \\ 
