--- a/howard-1980/howard.tex
+++ b/howard-1980/howard.tex
@@ -225,7 +225,7 @@ Correspondingly, replace the rule (1.3) of $\PI$ by the $n$-premise rule
 \inferrule{\G_1 \imp \a_1, \G_2 \imp \a_2 ... \G_n \imp \a_n}{\G_1, \G_2, ... \G_n,\,\,  \a_1 \limp (\a_2 \limp ( ... ( \a_n \limp \b)... )) \imp \b}.
 \tag{5.2}
 \end{equation}
-Of course (5.2) can be obtained by n applications of one of the Gentzen rules
+Of course (5.2) can be obtained by $n$ applications of one of the Gentzen rules
 \begin{equation}
 \inferrule{\G \imp \a, \quad \b, \D \imp \gamma}{\a \limp \b, \,\G, \,\,\D \imp \gamma}
 \tag{5.3}
