--- a/2012.08669/ms.tex
+++ b/2012.08669/ms.tex
@@ -1,10 +1,39 @@
-\documentclass[a4paper]{book}
+\documentclass[11pt]{book}
 \pdfoutput=1
 \usepackage[latin1]{inputenc}
 \title{Sheaf Theory Through Examples \\ (\textbf{Abridged Version})}
 \author{Daniel Rosiak}
 \date{December 12, 2020}
-\usepackage[papersize={7in, 9in}, margin=1in]{geometry}
+
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[papersize={7in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
 \usepackage{amsmath}
 \usepackage{amsfonts}
 \usepackage{amssymb}
