--- a/2105.14354/main.tex
+++ b/2105.14354/main.tex
@@ -1,4 +1,4 @@
-\documentclass[prl,twocolumn,amsmath,amssymb,bibnotes,aps,longbibliography]{revtex4-1}
+\documentclass[prl,amsmath,amssymb,bibnotes,aps,longbibliography,12pt]{revtex4-1}
 
 \usepackage{textcomp}
 \usepackage{pifont}
@@ -24,6 +24,13 @@ colorlinks=true, linkcolor=[RGB]{45,48,146}, citecolor=[RGB]{45,48,146}, filecol
 \clubpenalty=10000
 \widowpenalty=10000
 \displaywidowpenalty=10000
+
+\usepackage[papersize={7.0in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
 \newcommand{\unit}[1]{\ensuremath{\,\mathrm{#1}}}
 \newcommand{\bra}[1]{\langle{#1}|}
 \newcommand{\ket}[1]{|{#1}\rangle}
