--- a/1609.01421/continuum_arxiv_4.tex
+++ b/1609.01421/continuum_arxiv_4.tex
@@ -10,7 +10,38 @@
 % "well-defined" to "well defined"
 % "well-behaved" to "well behaved", "ill-behaved" to "ill behaved"
 
-\documentclass{article}
+\documentclass[12pt]{article}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.5in, 9.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{cite}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
 
 \hfuzz = 9pt
 \renewcommand{\arraystretch}{1.3}
@@ -24,16 +55,7 @@
 % theorem numbers at the beginning of the line
 %\swapnumbers
 
-% internal links should be highlighted in blue 
-\definecolor{myurlcolor}{rgb}{0.6,0,0}
-\definecolor{mycitecolor}{rgb}{0,0,0.8}
-\definecolor{myrefcolor}{rgb}{0,0,0.8}
-\usepackage[bookmarks=false]{hyperref}
 %\usepackage[pagebackref,hypertexnames=true]{hyperref}
-\hypersetup{colorlinks,
-linkcolor=myrefcolor,
-citecolor=mycitecolor,
-urlcolor=myurlcolor}
 
 % references
 
@@ -100,7 +122,7 @@ urlcolor=myurlcolor}
   \vspace{0.3cm}   
   {\small email:  baez@math.ucr.edu \\} 
   \vspace{0.3cm}   
-  {\small \today}
+  {\small {1 Feb 2020}}
   \vspace{0.3cm}   
 \end{center}   
 
@@ -241,11 +263,11 @@ With more dimensions of space, the situation becomes even worse.  This is part o
 \section{Classical electrodynamics of point particles}
 \label{electrodynamics}
 
-Now let us consider special relativity.  Special relativity prohibits instantaneous action at a distance.  Thus, most physicists believe that special relativity requires that forces be carried by fields, with disturbances in these fields propagating no faster than the speed of light.  The argument for this is not watertight, but we see to actually \emph{see} charged particles transmitting forces via a field, the electromagnetic field---that is, light.  So, most work on relativistic interactions brings in fields.
+Now let us consider special relativity.  Special relativity prohibits instantaneous action at a distance.  Thus, most physicists believe that special relativity requires that forces be carried by fields, with disturbances in these fields propagating no faster than the speed of light.  The argument for this is not watertight, but we seem to actually \emph{see} charged particles transmitting forces via a field, the electromagnetic field---that is, light.  So, most work on relativistic interactions brings in fields.
 
 Classically, charged point particles interacting with the electromagnetic field are described by two sets of equations: Maxwell's equations and the Lorentz force law.  The first are a set of differential equations involving:
 \begin{itemize}
-\item the electric field $\vec E$ and mangetic field $\vec B$ (bundled together into the electromagnetic field $F$), and
+\item the electric field $\vec E$ and magnetic field $\vec B$ (bundled together into the electromagnetic field $F$), and
 \item the electric charge density $\rho$ and current density $\vec \jmath$ (bundled into another field called the `four-current' $J$). 
 \end{itemize}
 By themselves, these equations are not enough to completely determine the future given initial conditions.  In fact, you can choose $\rho$ and $\vec \jmath$ freely, subject
@@ -862,7 +884,7 @@ I thank Flip Tancredo for his Feynman diagram package, and Emory Bunn and Greg W
 \bibitem{Abraham1905} M.\ Abraham, \textsl{Theorie der Elektrizit\"at: Elektromagnetische Theorie der Strahlung}, Teubner, Leipzig, 1905.  Also available at 
 \href{https://archive.org/details/theoriederelekt04fpgoog}{https://archive.org/details/theoriederelekt04fpgoog}
 
-\bibitem{AHKN} T.\ Aoyama, M.\ Hayakawa, T.\ Kinoshita and M.\ Nio, Tenth-order QED contribution to the electron $g−2$ and an improved value of the fine structure constant, \textsl{Phys.\ Rev.\ Lett.\ }\textbf{109} (2012), 111807 . Also available as \href{http://arxiv.org/abs/1205.5368}{arXiv:1205.5368}.
+\bibitem{AHKN} T.\ Aoyama, M.\ Hayakawa, T.\ Kinoshita and M.\ Nio, Tenth-order QED contribution to the electron $g-2$ and an improved value of the fine structure constant, \textsl{Phys.\ Rev.\ Lett.\ }\textbf{109} (2012), 111807 . Also available as \href{http://arxiv.org/abs/1205.5368}{arXiv:1205.5368}.
 
 \bibitem{AristotleZeno1} Aristotle, \textsl{Physics} VI:9, 239b10.  Available at  \href{http://classics.mit.edu/Aristotle/physics.6.vi.html\#761}{http://classics.mit.edu/\break Aristotle/physics.6.vi.html\#761}.
  
