--- a/howard-1980/howard.tex
+++ b/howard-1980/howard.tex
@@ -125,9 +125,11 @@ bookmarksopenlevel=10
 \begin{document}
 
 \maketitle
-\bigskip
 \begin{center}
 {\small\it Dedicated to Professor H. B. Curry on the occasion of his 80th Birthday}
+\end{center}
+\begin{center}
+{\small\it Transcribed into \TeX\ by psu in 2021 based on another transcription \\ by Armando B. Matos from 2017}
 \end{center}
 \bigskip
 
@@ -149,7 +151,7 @@ The following notion of construction, for positive implicational propositional l
 \subsection*{\it 1. Formulation of the sequent calculus}
 
 Let $\PI$ denote positive implicational propositional logic. The prime formulae of $\PI$ are propositional variables. If $\a$ and $\b
-$ are formulae, so is $\a \limp \b$. A sequent has the form $\G \imp \b$\footnote{Editor's note: In most modern exposition on this subject one would use the notation $\vdash$ where this paper uses $\imp$ in these deduction rules. So don't get confused and think that those arrows mean implication and/or a function arrow}, where $\G$ is a (possibly empty) finite sequence of formulae and $\b$ is a formula. The axioms and rules of inference of $\PI$ are as follows.
+$ are formulae, so is $\a \limp \b$. A sequent has the form $\G \imp \b$\footnote{Editor's note: In most modern exposition on this subject one would use the notation $\vdash$ where this paper uses $\imp$ in these deduction rules. So don't get confused and think that those arrows mean implication and/or a function arrow.}, where $\G$ is a (possibly empty) finite sequence of formulae and $\b$ is a formula. The axioms and rules of inference of $\PI$ are as follows.
 
 \begin{quote}
 \begin{description}[font=\normalfont]
