--- a/howard-1980/howard.tex
+++ b/howard-1980/howard.tex
@@ -38,7 +38,7 @@ bookmarksopenlevel=10
 \sloppy
 \raggedbottom
 \pagestyle{plain}
-%\usepackage[euler-digits]{eulervm}
+\usepackage[euler-digits]{eulervm}
 \usepackage{enumitem}
 \usepackage{mathpartir}
 \usepackage{stmaryrd}
