--- a/gr-qc-0608018/0608018v1.tex
+++ b/gr-qc-0608018/0608018v1.tex
@@ -22,6 +22,7 @@ bookmarksopen=true,
 bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
+
 \usepackage[noBBpl,sc]{mathpazo}
 \usepackage[papersize={7.0in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
 \linespread{1.05}
@@ -97,17 +98,19 @@ bookmarksopenlevel=10
 
 \begin{document} 
 
-\title{ The History and Present Status of Quantum Field Theory in Curved
+\title{\large The History and Present Status of Quantum Field Theory in Curved
 Spacetime}  
 
-\author{Robert M. Wald \\ \\  
- {\it Enrico Fermi Institute and Department of Physics}%\\  
+\author{\large Robert M. Wald \\ 
+ {\normalsize\it Enrico Fermi Institute and Department of Physics}%\\  
  %{\it The University of Chicago, Chicago, IL 60637, USA} 
         } %%% 
 
-\date{3 August 2006}
+\date{\normalsize 3 August 2006}
 
 \maketitle
+
+\linespread{1}
 
 \begin{abstract}
 
@@ -143,6 +146,8 @@ the historical development of the subject and describe some of the
 recent progress.
 
 \end{abstract} 
+
+\linespread{1.05}
 
 \section{Introduction} 
 
