--- a/1206.3116/1206.3116-psu.tex
+++ b/1206.3116/1206.3116-psu.tex
@@ -1,4 +1,44 @@
-\documentstyle[11pt, amsfonts]{article}
+\documentclass[12pt]{article}
+
+\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={7.0in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{cite}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 
 \begin{document}
 
@@ -10,7 +50,7 @@
 
 \begin{center}
 
-{\Large {\bf ``QUANTIZATION IS A MYSTERY''}}\footnote{First part of a famous
+{\Large {\bf Quantization is a Mystery}}\footnote{First part of a famous
 aphorism of Edward Nelson that ends with ``{\it but second quantization is a
 functor}''. To quote John Baez \cite{B06} ``No one is a true mathematical
 physicist unless he can explain'' this saying.
@@ -1372,7 +1412,7 @@ The Weyl map may also be expressed in terms of the integral kernel matrix elemen
 \label{kern}
     \left\langle x| U [f] |y \right\rangle = \int_{-\infty}^\infty {{\rm d}p\over h} ~e^{ip(x-y)/\hbar}~ f\left({x+y\over2},p\right) . 
 \end{equation}
-The inverse of the above Weyl map is the {\it Wigner map} \cite{W32}, which takes the operator Φ back to the original phase-space kernel function f,
+The inverse of the above Weyl map is the {\it Wigner map} \cite{W32}, which takes the operator $\phi$ back to the original phase-space kernel function f,
 \begin{equation}
 \label{Wigner}
     f(q,p)= 2 \int_{-\infty}^\infty {\rm d}y~e^{-2ipy/\hbar}~ \left\langle q-y| U [f] |q+y \right\rangle. 
@@ -2104,11 +2144,11 @@ beats Hubble by two years, {\it Physics Today} (2011); arXiv:1104.3031 [physics.
 \bibitem[W]{W} Andr\'e Weil, {\it Introduction \`a l'\'Etude des Vari\'et\'es K\"ahl\'eriennes},
 Hermann, Paris 1958.
 
-\bibitem[W64]{W64} A. Weil, Sur certains groupes d’op\'érateurs unitaires, {\it Acta Math.} {\bf 111}
-(1964) 143-211; Sur la formule de Siegel dans la th\'éorie des groupes classiques, {\it ibid.} 
+\bibitem[W64]{W64} A. Weil, Sur certains groupes d’op\'erateurs unitaires, {\it Acta Math.} {\bf 111}
+(1964) 143-211; Sur la formule de Siegel dans la th\'eorie des groupes classiques, {\it ibid.} 
 {\bf 113} (1965) 1-87.
 
-\bibitem[W94]{W94} Alan Weinstein, Deformation quantization, {\it S´eminaire Bourbaki}, expos´e 789 , {\it Ast´erisque} {\bf 227} (1994) 389-409.
+\bibitem[W94]{W94} Alan Weinstein, Deformation quantization, {\it S´eminaire Bourbaki}, expose 789 , {\it Ast´erisque} {\bf 227} (1994) 389-409.
 
 \bibitem[WZ]{WZ} A. Weinstein, M. Zambon, Variations on prequantization, {\it
 Travaux math\'ematiques} {\bf 16} (2005) 187-219; math.SG/0412502.
