--- a/1206.3116/1206.3116-psu.tex
+++ b/1206.3116/1206.3116-psu.tex
@@ -574,7 +574,7 @@ of the infinite dimensional Lie algebra of Poisson brackets:
 \begin{equation}
  [X_f, X_g] = X_{\{f , g\}}.
 \end{equation}
-A smooth manifold $M$ equipped with a Poisson bracket (that is skew-symmetric and satisfies the {\it Jacobi identity} is called
+A smooth manifold $M$ equipped with a Poisson bracket (that is skew-symmetric and satisfies the {\it Jacobi identity}) is called
 a {\it Poisson manifold}. It is clear from (\ref{PB}) that the PB gives rise to a derivation on the algebra of smooth functions 
 on $M$ which obeys the {\it Leibniz\footnote{Gottfried Wilhelm Leibniz (1646-1716), mathematician-philosopher, a precursor of the symbolic logic, codiscoverer of the calculus - together with Isaac Newton (1642-1727).} rule}, thus defining a {\it Poisson structure}:
 \begin{equation}
